Drop cargo, use Jetty 12